v340/downloads.md
---
title: Downloads
---
Don't forget to read the [NetHack 3.4.0 release notes](release.html)!

* table of contents
{:toc}

---

## Windows

[nh340win.zip](http://sourceforge.net/projects/nethack/files/nethack/3.4.0/nh340win.zip/download)
: Contains two executables - an Intel Win32 tty console executable and an Intel Win32 Graphical Interface executable.  This may be used on Intel machines running Windows 95, 98, Me, NT 4.0 or later, Windows 2000, and Windows XP.

([Windows download instructions.](ports/download-win.html))

---

## Macintosh

[nethack-340.sit.hqx](http://sourceforge.net/projects/nethack/files/nethack/3.4.0/nethack-340.sit.hqx/download)
: NetHack 3.4.0 for PPC Macintosh running MacOS 7.0 to 9.x.

[nethack-340-osx.tar.gz](http://sourceforge.net/projects/nethack/files/nethack/3.4.0/nethack-340-osx.tar.gz/download)
: NetHack 3.4.0 for Mac OS X.

([Macintosh download instructions.](ports/download-mac.html))

---

## Linux

[nh340lin.tgz](http://sourceforge.net/projects/nethack/files/nethack/3.4.0/nh340lin.tgz/download)
: NetHack 3.4.0 Linux Elf with TTY and Athena-widget-based (traditional X11) graphics interfaces (including tiles).  This version requires X11 libraries, which are installed on almost all Linux systems.

[nethack-3.4.0-1.i386.rpm](http://sourceforge.net/projects/nethack/files/nethack/3.4.0/nethack-3.4.0-1.i386.rpm/download)
: Same thing in RPM format.

[nh340linQt.tgz](http://sourceforge.net/projects/nethack/files/nethack/3.4.0/nh340linQt.tgz/download)
: NetHack 3.4.0 Linux Elf with TTY and Qt-based graphics interfaces (including tiles).  This version requires the Qt libraries (version 2.2) which may or may not be installed on any particular Linux system.

[nh340linQt23.tgz](http://sourceforge.net/projects/nethack/files/nethack/3.4.0/nh340linQt23.tgz/download)
: As above, but for Qt 2.3.

([Linux download instructions.](ports/download-linux.html))

---

## MS-DOS

[nh340dos.zip](http://sourceforge.net/projects/nethack/files/nethack/3.4.0/nh340dos.zip/download)
: This contains the protected-mode version of NetHack built with DJGPP V2.  It requires at least 3MB extended memory and at least 2.8MB of free hard drive space to unzip.  A '386 or greater processor is needed.

([MS-DOS download instructions.](ports/download-msdos.html))

---

## OS/2

[nh34os2-2.zip](http://sourceforge.net/projects/nethack/files/nethack/3.4.0/nh34os2-2.zip/download)
: This file packaged with InfoZip 5.x contains a 32-bit binary built using EMX 0.9d.  In principle it should be runnable on OS/2 version 2.0 or later but has not been tested on any version other than 4.0.

[nh34x11os2-2.zip](http://sourceforge.net/projects/nethack/files/nethack/3.4.0/nh34x11os2-2.zip/download)
: This file packaged with InfoZip 5.x contains a 32-bit binary built using EMX 0.9d and requires the EMX runtime libraries and dynamically linked against the XFree86 libraries for OS/2.  It requires that these libraries along with XAW.dll be installed to function and will run in both text mode and X11 tiles mode.

([OS/2 download instructions.](ports/download-os2.html))

---

## Amiga

[nh340ami.lha](http://sourceforge.net/projects/nethack/files/nethack/3.4.0/nh340ami.lha/download)
: NetHack 3.4.0 for 68K-based Amiga.

[nh340mos.lha](http://sourceforge.net/projects/nethack/files/nethack/3.4.0/nh340mos.lha/download)
: NetHack 3.4.0 for PPC-based Amiga running MorphOS.

([Amiga download instructions.](ports/download-amiga.html))

---

## Atari

[nh340gt.lzh](http://sourceforge.net/projects/nethack/files/nethack/3.4.0/nh340gt.lzh/download)
: NetHack 3.4.0 for Ataris running TOS, MiNT or MagiC.  This is a GEM (tiles) and TTY (plain text only) port of NetHack.  It requires at least 2MB free memory and at least 3MB of free hard drive space.

([Atari download instructions.](ports/download-atari.html))

---

## Source code

[nethack-340.tgz](http://sourceforge.net/projects/nethack/files/nethack/3.4.0/nethack-340.tgz/download)
: NetHack 3.4.0 source release.

[nh331-340-diffs.gz](http://sourceforge.net/projects/nethack/files/nethack/3.4.0/nh331-340-diffs.gz/download)
: Context diff from version 3.3.1.  (If you don't know what this is, you don't need it.)

([Source code download instructions.](download-src.html))
