v341/downloads.md
---
title: Downloads
---
Don't forget to read the [NetHack 3.4.1 release notes](release.html)!

* table of contents
{:toc}

---

## Windows

[nh341wn3.zip](http://sourceforge.net/projects/nethack/files/nethack/3.4.1/nh341wn3.zip/download)
: Contains two executables - an Intel Win32 tty console executable and an Intel Win32 Graphical Interface executable.  This may be used on Intel machines running Windows 95, 98, Me, NT 4.0 or later, Windows 2000, and Windows XP.

([Windows download instructions.](ports/download-win.html))

---

## Macintosh

[nethack-341.sit](http://sourceforge.net/projects/nethack/files/nethack/3.4.1/nethack-341.sit/download)
: NetHack 3.4.1 for PPC Macintosh running MacOS 7.0 to 9.x.

[NetHack-3.4.1-MacOSX.tar.gz](http://sourceforge.net/projects/nethack/files/nethack/3.4.1/NetHack-3.4.1-MacOSX.tar.gz/download)
: NetHack 3.4.1 for Mac OS X.

([Macintosh download instructions.](ports/download-mac.html))

---

## Linux

[nh341lin.tgz](http://sourceforge.net/projects/nethack/files/nethack/3.4.1/nh341lin.tgz/download)
: NetHack 3.4.1 Linux Elf with TTY and Athena-widget-based (traditional X11) graphics interfaces (including tiles).  This version requires X11 libraries, which are installed on almost all Linux systems.

[nethack-3.4.1-1.i386.rpm](http://sourceforge.net/projects/nethack/files/nethack/3.4.1/nethack-3.4.1-1.i386.rpm/download)
: Same thing in RPM format.

[nethack-3.4.1-2qt.i386.rpm](http://sourceforge.net/projects/nethack/files/nethack/3.4.1/nethack-3.4.1-2qt.i386.rpm/download)
: NetHack 3.4.1 Linux Elf with Qt-based graphics interfaces (including tiles).  This version requires the Qt libraries (version 2.x) which may or may not be installed on any particular Linux system.

([Linux download instructions.](ports/download-linux.html))

---

## MS-DOS

[nh341dos.zip](http://sourceforge.net/projects/nethack/files/nethack/3.4.1/nh341dos.zip/download)
: This contains the protected-mode version of NetHack built with DJGPP V2.  It requires at least 3MB extended memory and at least 2.8MB of free hard drive space to unzip.  A '386 or greater processor is needed.

([MS-DOS download instructions.](ports/download-msdos.html))

---

## Windows CE

[nh341ce-ppc.exe](http://sourceforge.net/projects/nethack/files/nethack/3.4.1/nh341ce-ppc.exe/download)
: NetHack 3.4.1 installer package for *PocketPC* platform (Windows CE 3.0, PocketPC 2000 and PocketPC 2002).

[nh341ce-hpc.exe](http://sourceforge.net/projects/nethack/files/nethack/3.4.1/nh341ce-hpc.exe/download)
: NetHack 3.4.1 installer package for *Handheld PC Professional* running Windows 2.11 or higher.

[nh341ce-ps211.exe](http://sourceforge.net/projects/nethack/files/nethack/3.4.1/nh341ce-ps211.exe/download)
: NetHack 3.4.1 installer package for the *Palm Size PC* running Windows CE 2.11.

[nh341ce-sph-ARM.CAB](http://sourceforge.net/projects/nethack/files/nethack/3.4.1/nh341ce-sph-ARM.CAB/download)
: Experimental NetHack 3.4.1 installer package for the Smartphone 2002.  This is an *unsigned* CAB so you will need an *unlocked* version of your phone to install it and run the program (e.g. a *developer* version of the Orange SPV).

([Windows CE download instructions.](ports/download-wince.html))

---

## OS/2

[nh341os2.zip](http://sourceforge.net/projects/nethack/files/nethack/3.4.1/nh341os2.zip/download)
: This file packaged with InfoZip 5.x contains a 32-bit binary built using EMX 0.9d.  In principle it should be runnable on OS/2 version 2.0 or later but has not been tested on any version other than 4.0.

[nh341os2x11.zip](http://sourceforge.net/projects/nethack/files/nethack/3.4.1/nh341os2x11.zip/download)
: This file packaged with InfoZip 5.x contains a 32-bit binary built using EMX 0.9d and requires the EMX runtime libraries and dynamically linked against the XFree86 libraries for OS/2.  It requires that these libraries along with XAW.dll be installed to function and will run in both text mode and X11 tiles mode.

([OS/2 download instructions.](ports/download-os2.html))

---

## Amiga

[nh341ami.lha](http://sourceforge.net/projects/nethack/files/nethack/3.4.1/nh341ami.lha/download)
: NetHack3.4.1 for 68K-based Amiga.

[nh341mos.lha](http://sourceforge.net/projects/nethack/files/nethack/3.4.1/nh341mos.lha/download)
: NetHack3.4.1 for PPC-based Amiga running MorphOS.

([Amiga download instructions.](ports/download-amiga.html))

---

## Atari

[nh341gt.lzh](http://sourceforge.net/projects/nethack/files/nethack/3.4.1/nh341gt.lzh/download)
: NetHack3.4.1 for Ataris running TOS, MiNT or MagiC. This is a GEM (tiles) and TTY (plain text only) port of NetHack. It requires at least 2MB free memory and at least 3MB of free hard drive space.

([Atari download instructions,](ports/download-atari.html))

---

## Source code

Alternatively, you can clone our [code repository]({{ site.code_repository_url }}) for the latest version of NetHack, or any other version by its tag; see [How to Contribute]({{ site.baseurl }}/how-to-contribute.html#editing-the-source-code) for more details.

[nethack-341.tgz](http://sourceforge.net/projects/nethack/files/nethack/3.4.1/nethack-341.tgz/download)
: NetHack 3.4.1 source release.

[nh340-341-diffs.gz](http://sourceforge.net/projects/nethack/files/nethack/3.4.1/nh340-341-diffs.gz/download)
: Context diff from version 3.4.0.  (If you don't know what this is, you don't need it.)

([Source code download instructions.](download-src.html))

---

## Large tiles (optional)

[tiles32.zip](http://sourceforge.net/projects/nethack/files/nethack/3.4.0/tiles32.zip/download)
: A set of 32 x 32 tiles (that is, larger than the default graphics set).

To use this tileset, extract it to the same directory/folder as NetHack, then add the following line to your config file:

```
OPTIONS=tile_file:tiles32.bmp, tile_width:32, tile_height:32
```
